--- a/app/views/otp_mailer/send_otp.text.erb
+++ b/app/views/otp_mailer/send_otp.text.erb
@@ -1,3 +1,5 @@
-親愛的 <%= @user.firstname %>：
-您的登入驗證碼是： <%= @otp_code %>
-請在 10 分鐘內輸入。
+Dear <%= @user.firstname %>,
+
+Your login verification code is: <%= @otp_code %>
+
+Please enter this code within 10 minutes.
