--- a/app/views/otp_mailer/send_otp.html.erb
+++ b/app/views/otp_mailer/send_otp.html.erb
@@ -1,3 +1,3 @@
-<p>親愛的 <%= @user.firstname %>：</p>
-<p>您的登入驗證碼是： <strong style="font-size: 20px;"><%= @otp_code %></strong></p>
-<p>請在 10 分鐘內輸入。</p>
+<p>Dear <%= @user.firstname %>,</p>
+<p>Your login verification code is: <strong style="font-size: 20px;"><%= @otp_code %></strong></p>
+<p>Please enter this code within 10 minutes.</p>
